tests/compile_fail/effectful_handler_reused_incompatible_arrow.stderr
error[E0277]: not every member of this fact set is declared by the enclosing set
  --> tests/compile_fail/effectful_handler_reused_incompatible_arrow.rs:12:13
   |
12 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
13 | |         Input -> { First, Second } => handler,
14 | |         effects: [],
15 | |         middleware: []
16 | |     );
   | |_____^ unsatisfied trait bound
   |
   = help: the trait `SubsetOf<WithMember<support::First, EmptySet>, SubsetProofStep<MemberFound, SubsetProofStep<MemberAfter<_>, SubsetProofEnd>>>` is not implemented for `WithMember<support::First, WithMember<support::Second, EmptySet>>`
   = note: every fact an allowed effect may author must be a member of the handler's `Output` set, and a stage arrow must equal the handler's declared set in both directions (FLOWIP-120z)
note: required by a bound in `main::__obzenflow_assert_handler_output_declares_every_arrow_member`
  --> tests/compile_fail/effectful_handler_reused_incompatible_arrow.rs:12:13
   |
12 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
13 | |         Input -> { First, Second } => handler,
14 | |         effects: [],
15 | |         middleware: []
16 | |     );
   | |     ^
   | |     |
   | |_____required by a bound in this function
   |       required by this bound in `__obzenflow_assert_handler_output_declares_every_arrow_member`
   = note: this error originates in the macro `$crate::__obzenflow_assert_effectful_transform_contract` which comes from the expansion of the macro `obzenflow_dsl::effectful_transform` (in Nightly builds, run with -Z macro-backtrace for more info)
